--- a/Animanure/i18n/default.json
+++ b/Animanure/i18n/default.json
@@ -1,3 +1,5 @@
 {
-
+   "config.general.title": "Animanure",
+   "items.name.manure": "Manure",
+   "items.description.manure": "A stinky mess left by a well-fed barn animal."
 }
